--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -3933,34 +3933,34 @@ kg
                     "../../image_sp/card/l/asuka_10.jpg", 
                     "../../image_sp/card/l/asuka_21.jpg", 
                     "../../image_sp/card/l/asuka_22.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/42027e0a6ed923a0b6bb8eb4b8e5eff3.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/2c156cdf5c956999318cf46708f1fad0.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/aff88d81c2ac012a0e9beca15e36200f.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/f029377df33b0c281856b7e879be1c96.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/1114c352cd5b0ad6e635009fb34808cb.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/14d9fc31f58df5da5bbddc246775e1bd.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/1a62a0aeafb9ded1cc66e67f3ce178db.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/ba8a9663527dafc77bf3e9ac4615c3cf.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/29578016c7ff21a9d85eef32ab93e0bb.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/b1bed12bc96443d7f3906f35594cbedd.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/5bbad382b5722462d5c5dd5fe6926a51.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/58efb2db39c23d19a4c7dca78d31edbc.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/f069c36e4de862aadd81791d55f1f7d8.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/3f93733e01fed8506d57f0c5894586f6.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/1b188aa58696b86361a40ddb02367905.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/07b3459a7103dd863816f12b68181a27.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/d7500341fbdc824ef9397139d41bc88f.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/25f0f565ca162c6739139a6ecc6138ba.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/93d7d0b2b828eaf1b1c1ccec22486e2f.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/90d2d5f29c26101c17565ae6c2c88787.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/7caeece0cbb3d018fe8a09bdb981e2b1.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/db230fcfdcc37846836cfbb1c4663916.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/55afd806ea338f7e9f9090ffd11f4639.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/2b06b2edf824f2f09068fa9b20d0b946.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/722ce114a2b78aa7826399264f5ac557.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/b386b36cfbd52fb5b05068f4b5a1a917.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/bb52abee7d193df4509214cbf2f94f34.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_b/l/a890d6aea45cf39e58caf68a508b3153.jpg"],
+                    "../../image_sp/card_sign_b/l/asuka_05.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_06.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_11.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_12.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_13.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_14.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_15.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_16.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_17.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_18.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_19.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_20.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_23.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_24.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_25.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_26.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_27.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_28.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_29.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_30.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_31.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_32.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_33.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_34.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_35.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_36.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_37.jpg", 
+                    "../../image_sp/card_sign_b/l/asuka_38.jpg"],
                     "l_premium": {
                         "10": "../../image_sp/card_sign_p/l/asuka_05.jpg",
                         "11": "../../image_sp/card_sign_p/l/asuka_06.jpg",
@@ -4308,47 +4308,47 @@ kg
             var comment_tab_start = null;
             var show_premium = true;
         </script>
-        <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/createjs.min.js'></script>
+        <script type='text/javascript' src='../../js/createjs.min.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/2415201_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/2515202_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/2520002_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/2523102_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/2542902_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/2464501_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/sign_effect/130_sign_effect.js'></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/underscore-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/backbone-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/ilibrary.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/islider.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/boombox.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/min/gallery.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/min/bb_loader.min.js" type="text/javascript"></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/130_sign_effect.js'></script>
+        <script src="../../js/underscore-min.js"></script>
+        <script src="../../js/backbone-min.js"></script>
+        <script src="../../js/ilibrary.js" type="text/javascript"></script>
+        <script src="../../js/islider.js" type="text/javascript"></script>
+        <script src="../../js/boombox.min.js" type="text/javascript"></script>
+        <script src="../../js/min/gallery.min.js" type="text/javascript"></script>
+        <script src="../../js/min/bb_loader.min.js" type="text/javascript"></script>
         <div class="m-Top8 m-Btm8">
-            <img src="http://sp.pf-img-a.mbga.jp/12008305?url=http://mobamas.net/idolmaster/image_sp/ui/line_hoshi.jpg" width="100%">
+            <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_gallery'>
+        <a href='../../mypage.html'>
             <div class="backLink">アイドルギャラリーTOP</div>
         </a>
         <footer>
