--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -3787,12 +3787,12 @@ kg
                         "4": "1"
                     },
                     "flash_path": {
-                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/334/2/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/334/5/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/334/2",
+                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/334/5"
                     },
                     "voice_url": {
-                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/334/2/idol_gallery/__hash_card_id__",
-                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/334/5/idol_gallery/__hash_card_id__"
+                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/334/2",
+                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/334/5"
                     },
                     "open_flag": {
                         "1": "1",
@@ -3814,12 +3814,12 @@ kg
                         "5": "1"
                     },
                     "flash_path": {
-                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/236/3/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "5": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/236/6/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/236/3",
+                        "5": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/236/6"
                     },
                     "voice_url": {
-                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/236/3/idol_gallery/__hash_card_id__",
-                        "5": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/236/6/idol_gallery/__hash_card_id__"
+                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/236/3",
+                        "5": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/236/6"
                     },
                     "open_flag": {
                         "2": "1",
@@ -3837,10 +3837,10 @@ kg
                     "story_id": "202",
                     "story_title": "碧落のリベレイター",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/202/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/202/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/202/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/202/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/202/1", 
+                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/202/2"],
+                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/202/1", 
+                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/202/2"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/130.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_202_2.jpg"],
@@ -3850,10 +3850,10 @@ kg
                     "story_id": "161",
                     "story_title": "アイドルプロデュース アロハ!常夏の楽園",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/161/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/161/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/161/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/161/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/161/1", 
+                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/161/2"],
+                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/161/1", 
+                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/161/2"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/epi_button_movie_161_1.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_161_2.jpg"],
@@ -3867,12 +3867,12 @@ kg
                         "4": "1"
                     },
                     "flash_path": {
-                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/124/2/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/124/5/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/124/2",
+                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/movie_play/124/5"
                     },
                     "voice_url": {
-                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/124/2/idol_gallery/__hash_card_id__",
-                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/124/5/idol_gallery/__hash_card_id__"
+                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/124/2",
+                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story/sound_play/124/5"
                     },
                     "open_flag": {
                         "1": "1",
@@ -4021,34 +4021,34 @@ kg
                     "../../image_sp/card/l/asuka_37.jpg", 
                     "../../image_sp/card/l/asuka_38.jpg"],
                     "l_nosign_p": {
-                        "10": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/42027e0a6ed923a0b6bb8eb4b8e5eff3.jpg",
-                        "11": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/2c156cdf5c956999318cf46708f1fad0.jpg",
-                        "12": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/aff88d81c2ac012a0e9beca15e36200f.jpg",
-                        "13": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/f029377df33b0c281856b7e879be1c96.jpg",
-                        "14": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/1114c352cd5b0ad6e635009fb34808cb.jpg",
-                        "15": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/14d9fc31f58df5da5bbddc246775e1bd.jpg",
-                        "16": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/1a62a0aeafb9ded1cc66e67f3ce178db.jpg",
-                        "17": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/ba8a9663527dafc77bf3e9ac4615c3cf.jpg",
-                        "18": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/29578016c7ff21a9d85eef32ab93e0bb.jpg",
-                        "19": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/b1bed12bc96443d7f3906f35594cbedd.jpg",
-                        "20": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/5bbad382b5722462d5c5dd5fe6926a51.jpg",
-                        "21": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/58efb2db39c23d19a4c7dca78d31edbc.jpg",
-                        "22": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/f069c36e4de862aadd81791d55f1f7d8.jpg",
-                        "23": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/3f93733e01fed8506d57f0c5894586f6.jpg",
-                        "24": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/1b188aa58696b86361a40ddb02367905.jpg",
-                        "25": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/07b3459a7103dd863816f12b68181a27.jpg",
-                        "26": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/d7500341fbdc824ef9397139d41bc88f.jpg",
-                        "27": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/25f0f565ca162c6739139a6ecc6138ba.jpg",
-                        "28": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/93d7d0b2b828eaf1b1c1ccec22486e2f.jpg",
-                        "29": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/90d2d5f29c26101c17565ae6c2c88787.jpg",
-                        "30": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/7caeece0cbb3d018fe8a09bdb981e2b1.jpg",
-                        "31": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/db230fcfdcc37846836cfbb1c4663916.jpg",
-                        "32": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/55afd806ea338f7e9f9090ffd11f4639.jpg",
-                        "33": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/2b06b2edf824f2f09068fa9b20d0b946.jpg",
-                        "34": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/722ce114a2b78aa7826399264f5ac557.jpg",
-                        "35": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/b386b36cfbd52fb5b05068f4b5a1a917.jpg",
-                        "36": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/bb52abee7d193df4509214cbf2f94f34.jpg",
-                        "37": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card_sign_no_p/l/a890d6aea45cf39e58caf68a508b3153.jpg"
+                        "10": "../../image_sp/card_sign_no_p/l/asuka_05.jpg",
+                        "11": "../../image_sp/card_sign_no_p/l/asuka_06.jpg",
+                        "12": "../../image_sp/card_sign_no_p/l/asuka_11.jpg",
+                        "13": "../../image_sp/card_sign_no_p/l/asuka_12.jpg",
+                        "14": "../../image_sp/card_sign_no_p/l/asuka_13.jpg",
+                        "15": "../../image_sp/card_sign_no_p/l/asuka_14.jpg",
+                        "16": "../../image_sp/card_sign_no_p/l/asuka_15.jpg",
+                        "17": "../../image_sp/card_sign_no_p/l/asuka_16.jpg",
+                        "18": "../../image_sp/card_sign_no_p/l/asuka_17.jpg",
+                        "19": "../../image_sp/card_sign_no_p/l/asuka_18.jpg",
+                        "20": "../../image_sp/card_sign_no_p/l/asuka_19.jpg",
+                        "21": "../../image_sp/card_sign_no_p/l/asuka_20.jpg",
+                        "22": "../../image_sp/card_sign_no_p/l/asuka_23.jpg",
+                        "23": "../../image_sp/card_sign_no_p/l/asuka_24.jpg",
+                        "24": "../../image_sp/card_sign_no_p/l/asuka_25.jpg",
+                        "25": "../../image_sp/card_sign_no_p/l/asuka_26.jpg",
+                        "26": "../../image_sp/card_sign_no_p/l/asuka_27.jpg",
+                        "27": "../../image_sp/card_sign_no_p/l/asuka_28.jpg",
+                        "28": "../../image_sp/card_sign_no_p/l/asuka_29.jpg",
+                        "29": "../../image_sp/card_sign_no_p/l/asuka_30.jpg",
+                        "30": "../../image_sp/card_sign_no_p/l/asuka_31.jpg",
+                        "31": "../../image_sp/card_sign_no_p/l/asuka_32.jpg",
+                        "32": "../../image_sp/card_sign_no_p/l/asuka_33.jpg",
+                        "33": "../../image_sp/card_sign_no_p/l/asuka_34.jpg",
+                        "34": "../../image_sp/card_sign_no_p/l/asuka_35.jpg",
+                        "35": "../../image_sp/card_sign_no_p/l/asuka_36.jpg",
+                        "36": "../../image_sp/card_sign_no_p/l/asuka_37.jpg",
+                        "37": "../../image_sp/card_sign_no_p/l/asuka_38.jpg"
                     },
                     "l_noframe": [null, null, null, null, null, null, null, null, null, null, 
                     "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/42027e0a6ed923a0b6bb8eb4b8e5eff3.jpg", 
