--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -4051,34 +4051,34 @@ kg
                         "37": "../../image_sp/card_sign_no_p/l/asuka_38.jpg"
                     },
                     "l_noframe": [null, null, null, null, null, null, null, null, null, null, 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/42027e0a6ed923a0b6bb8eb4b8e5eff3.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/2c156cdf5c956999318cf46708f1fad0.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/aff88d81c2ac012a0e9beca15e36200f.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/f029377df33b0c281856b7e879be1c96.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/1114c352cd5b0ad6e635009fb34808cb.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/14d9fc31f58df5da5bbddc246775e1bd.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/1a62a0aeafb9ded1cc66e67f3ce178db.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/ba8a9663527dafc77bf3e9ac4615c3cf.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/29578016c7ff21a9d85eef32ab93e0bb.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/b1bed12bc96443d7f3906f35594cbedd.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/5bbad382b5722462d5c5dd5fe6926a51.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/58efb2db39c23d19a4c7dca78d31edbc.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/f069c36e4de862aadd81791d55f1f7d8.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/3f93733e01fed8506d57f0c5894586f6.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/1b188aa58696b86361a40ddb02367905.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/07b3459a7103dd863816f12b68181a27.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/d7500341fbdc824ef9397139d41bc88f.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/25f0f565ca162c6739139a6ecc6138ba.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/93d7d0b2b828eaf1b1c1ccec22486e2f.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/90d2d5f29c26101c17565ae6c2c88787.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/7caeece0cbb3d018fe8a09bdb981e2b1.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/db230fcfdcc37846836cfbb1c4663916.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/55afd806ea338f7e9f9090ffd11f4639.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/2b06b2edf824f2f09068fa9b20d0b946.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/722ce114a2b78aa7826399264f5ac557.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/b386b36cfbd52fb5b05068f4b5a1a917.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/bb52abee7d193df4509214cbf2f94f34.jpg", 
-                    "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://mobamas.net/idolmaster/image_sp/card/l_noframe/a890d6aea45cf39e58caf68a508b3153.jpg"],
+                    "../../image_sp/card/l_noframe/asuka_05.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_06.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_11.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_12.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_13.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_14.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_15.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_16.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_17.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_18.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_19.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_20.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_23.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_24.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_25.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_26.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_27.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_28.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_29.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_30.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_31.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_32.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_33.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_34.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_35.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_36.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_37.jpg", 
+                    "../../image_sp/card/l_noframe/asuka_38.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l_p": [],
